# se-toolkit-hackathon

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/happiness_backend/: __init__.py  auth.py  database.py  main.py  menu_agent.py  schemas.py  security.py  settings.py
backend/src/happiness_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/happiness_backend/data/: admin_seed.json  menu_seed.json
backend/src/happiness_backend/routers/: __init__.py  admin.py  public.py
caddy/: Caddyfile
docs/: demo-script.md  lab9-plan.md  presentation-outline.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
