[project]
name = "happiness-backend"
version = "0.1.0"
description = "Backend API for Happiness Menu"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.128.7",
  "itsdangerous>=2.2.0",
  "psycopg[binary]>=3.2.10",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "uvicorn[standard]==0.40.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["happiness_backend*"]

[tool.setuptools.package-data]
"happiness_backend" = ["data/*.json"]
